crates/plotnik-tests/tests/04-emit/bytecode/binding/multiple_errors_cascade.txt
Q = (function_declaraton
  nme: (identifer) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: `function_declaraton` is not a valid node kind
 --> query.ptk:1:6
  |
1 | Q = (function_declaraton
  |      ^^^^^^^^^^^^^^^^^^^
  |
help: did you mean `function_declaration`?
  |
1 | Q = (function_declaration
  |                       +

error: `nme` is not a valid grammar field
 --> query.ptk:2:3
  |
2 |   nme: (identifer) @name
  |   ^^^
  |
help: did you mean `name`?
  |
2 |   name: (identifer) @name
  |    +

error: `identifer` is not a valid node kind
 --> query.ptk:2:9
  |
2 |   nme: (identifer) @name
  |         ^^^^^^^^^
  |
help: did you mean `identifier`?
  |
2 |   nme: (identifier) @name
  |                +
